# Othello

./: CMakeLists.txt  README.md  run.cmd  run.sh
game/: game.cpp
game/include/: BoardHelper.hpp  Evaluator.hpp  Position.hpp  Solver.hpp
game/src/: BoardHelper.cpp  Evaluator.cpp  Position.cpp  Solver.cpp
